django/network/cnp-ingress-django-hardening-policy-allow-only-default-port.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-ingress-django-hardening-policy-allow-only-default-port
  namespace: default         # Change namespace
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8000"
    - fromEndpoints:
        - {}
